# s_quant_prod

./: .env.OLD.dev  .env.app.dev  .gitignore  main.py  pyproject.toml  readme_internal.md
Backend/src/cores/: __init__.py  configuration.py  logger.py  logging_middleware.py
Backend/src/ztests/: env_log.py
Docker/: docker-compose.yml  docker-compose_00.yml  docker_down.sh  docker_html_tempalate.py  docker_reset.sh  docker_up.sh
Docker/centrifugo_config/: centrifugo_config.json  centrifugo_config_og.json
Docker/pgadmin_config/: servers.json
Docker/temporal_config/: create-namespace.sh  setup-postgres-es.sh
